[sc-35216] fix running maven test (#9)
* fix: wire up jvm arg to avoid runtime error

```log
Running TestSuite
java.lang.RuntimeException: java.io.IOException: Can not attach to current VM
	at mockit.internal.startup.AgentLoader.attachToRunningVM(AgentLoader.java:150)
	at mockit.internal.startup.AgentLoader.loadAgent(AgentLoader.java:60)
	at mockit.internal.startup.Startup.initializeIfPossible(Startup.java:200)
	at mockit.integration.testng.TestNGRunnerDecorator.onExecutionStart(TestNGRunnerDecorator.java:348)
	at org.testng.TestNG.runExecutionListeners(TestNG.java:1055)
	at org.testng.TestNG.run(TestNG.java:1002)
	at org.apache.maven.surefire.testng.TestNGExecutor.run(TestNGExecutor.java:132)
	at org.apache.maven.surefire.testng.TestNGDirectoryTestSuite.executeMulti(TestNGDirectoryTestSuite.java:193)
	at org.apache.maven.surefire.testng.TestNGDirectoryTestSuite.execute(TestNGDirectoryTestSuite.java:94)
	at org.apache.maven.surefire.testng.TestNGProvider.invoke(TestNGProvider.java:147)
	at org.apache.maven.surefire.booter.ForkedBooter.invokeProviderInSameClassLoader(ForkedBooter.java:290)
	at org.apache.maven.surefire.booter.ForkedBooter.runSuitesInProcess(ForkedBooter.java:242)
	at org.apache.maven.surefire.booter.ForkedBooter.main(ForkedBooter.java:121)
Caused by: java.io.IOException: Can not attach to current VM
	at jdk.attach/sun.tools.attach.HotSpotVirtualMachine.<init>(HotSpotVirtualMachine.java:75)
	at jdk.attach/sun.tools.attach.VirtualMachineImpl.<init>(VirtualMachineImpl.java:56)
	at jdk.attach/sun.tools.attach.AttachProviderImpl.attachVirtualMachine(AttachProviderImpl.java:58)
	at jdk.attach/com.sun.tools.attach.VirtualMachine.attach(VirtualMachine.java:207)
	at mockit.internal.startup.AgentLoader.attachToRunningVM(AgentLoader.java:144)
	... 12 more
```

* fix: add dependency to avoid `NoClassDefFoundError`

```log
java.lang.NoClassDefFoundError: javax/annotation/PostConstruct
Caused by: java.lang.ClassNotFoundException: jav